// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav renders Pipelines as active page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button"
    >
      <ExperimentsIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders Pipelines as active when on PipelineDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button"
    >
      <ExperimentsIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders collapsed state 1`] = `
<div
  className="root noShrink collapsedRoot"
  id="sideNav"
>
  <div
    className="button collapsedButton logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="collapsedLabel label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active collapsedButton"
    >
      <PipelinesIcon
        color="#fff"
      />
      <span
        className="collapsedLabel label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button collapsedButton"
    >
      <ExperimentsIcon
        color="#87a1b8"
      />
      <span
        className="collapsedLabel label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator collapsedSeparator"
  />
  <WithStyles(IconButton)
    className="chevron collapsedChevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders expanded state 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button active"
    >
      <PipelinesIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button"
    >
      <ExperimentsIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on AllRuns page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on Compare page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on NewExperiment page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on NewRun page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on RecurringRunDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active page when on RunDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav renders experiments as active when on ExperimentDetails page 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SideNav show jupyterhub link if accessible 1`] = `
<div
  className="root noShrink"
  id="sideNav"
>
  <div
    className="button logo"
  >
    <KubeflowLogo
      color="#fff"
      style={
        Object {
          "flexShrink": 0,
        }
      }
    />
    <span
      className="label logoLabel"
    >
      Kubeflow
    </span>
  </div>
  <Link
    className="unstyled"
    id="pipelinesBtn"
    replace={false}
    to="/pipelines"
  >
    <WithStyles(Button)
      className="button"
    >
      <PipelinesIcon
        color="#87a1b8"
      />
      <span
        className="label"
      >
        Pipelines
      </span>
    </WithStyles(Button)>
  </Link>
  <Link
    className="unstyled"
    id="experimentsBtn"
    replace={false}
    to="/experiments"
  >
    <WithStyles(Button)
      className="button active"
    >
      <ExperimentsIcon
        color="#fff"
      />
      <span
        className="label"
      >
        Experiments
      </span>
    </WithStyles(Button)>
  </Link>
  <a
    className="unstyled"
    href="/hub/"
    id="jupyterhubBtn"
    target="_blank"
  >
    <WithStyles(Button)
      className="button"
    >
      <pure(CodeIcon)
        style={
          Object {
            "height": 20,
            "width": 20,
          }
        }
      />
      <span
        className="label"
      >
        Notebooks
      </span>
      <pure(OpenInNewIcon)
        style={
          Object {
            "height": 12,
            "marginBottom": 8,
            "marginLeft": 5,
            "width": 12,
          }
        }
      />
    </WithStyles(Button)>
  </a>
  <hr
    className="separator"
  />
  <WithStyles(IconButton)
    className="chevron"
    onClick={[Function]}
  >
    <pure(ChevronLeftIcon) />
  </WithStyles(IconButton)>
</div>
`;
